<!--
  ~ Copyright 2017 Nextome S.r.l
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">GeoJSON Viewer</string>
    <string name="title_activity_maps">Map</string>
    <string name="geojson_opener_unable_to_read">Unable to read geoJson file.</string>
    <string name="activity_main_text">Tap anywhere to open a file</string>
    <string name="title_activity_open_street_map">OpenStreetMapActivity</string>
    <string name="title_activity_map_box">MapBoxActivity</string>
    <string name="activity_main_open_gmaps">Google Maps</string>
    <string name="activity_main_open_osm">Open Street Map</string>
    <string name="activity_main_open_mapbox">Mapbox</string>
    <string name="activity_main_open">Open with:</string>
    <string name="activity_main_open_multiple">files will be opened with:</string>
    <string name="activity_main_ask_permission">We need storage permission to store map data.</string>
    <string name="activity_main_info"><![CDATA[Made with <3 at Nextome]]></string>
    <string name="activity_main_back">BACK</string>
    <string name="activity_main_add">ADD ANOTHER</string>

    <string name="gmaps_key" templateMergeStrategy="preserve" translatable="false">
        GOOGLE_MAPS_KEY_HERE
    </string>
    <string name="mapbox_key">MAPBOX_KEY_HERE</string>
    <string name="geojson_opener_unable_to_parse">Unable to parse Json</string>
</resources>
