<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Nextome S.r.l
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nextome.geojsonviewer.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:onClick="openNextomeWebsite"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:text="@string/activity_main_info"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:id="@+id/activity_main_layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:visibility="visible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activity_main_text"
            android:gravity="center"
            android:onClick="openFilePicker"
            />
    </LinearLayout>

    <ScrollView
        android:id="@+id/activity_main_layout_map_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_open"
                android:textStyle="bold"
                android:paddingBottom="16dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_open_gmaps"
                android:onClick="openGoogleMaps"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_open_osm"
                android:onClick="openOsm"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_open_mapbox"
                android:onClick="openMapbox"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#ffffff"
                android:onClick="onBackPressed"
                android:text="@string/activity_main_back"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
